--- a/a2.css
+++ b/a2.css
@@ -324,6 +324,9 @@
   background-color: transparent;
   /* transition: all 0.35s; */
 }
+.gspancontainer p {
+  position: absolute;
+}
 .gspancontainer img {
   width: 100%;
   height: 100%;
@@ -350,4 +353,185 @@
 
 .gspancontainer:nth-child(1)::before {
   background-color: rgb(6, 255, 210, 0.5);
+}
+
+.gspancontainer:nth-child(2)::before {
+  background-color: rgba(255, 0, 0, 0.3);
+}
+
+.gspancontainer:nth-child(3)::before {
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.gspancontainer:nth-child(4)::before {
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.gspancontainer:nth-child(5)::before {
+  background-color: rgba(66, 255, 0, 0.3);
+}
+
+.gspancontainer:nth-child(6)::before {
+  background-color: rgba(0, 71, 255, 0.3);
+}
+.gspancontainer:nth-child(1) p {
+  top: 80%;
+  left: 10%;
+}
+.gspancontainer:nth-child(2) p {
+  top: 10%;
+  left: 10%;
+  color: white;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 17px;
+}
+.gspancontainer:nth-child(3) p {
+  top: 80%;
+  left: 10%;
+  color: white;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 17px;
+}
+.gspancontainer:nth-child(4) p {
+  top: 10%;
+  left: 70%;
+  color: white;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 17px;
+}
+.gspancontainer:nth-child(5) p {
+  top: 80%;
+  left: 10%;
+  color: white;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 17px;
+}
+.gspancontainer:nth-child(6) p {
+  top: 80%;
+  left: 10%;
+  color: white;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 17px;
+}
+.bmicontainer {
+  padding: 88px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 14;
+  max-width: 671px;
+  margin: 0 auto;
+}
+
+.bg-bmi {
+  background-color: rgb(34, 34, 34);
+  padding-top: 50px;
+}
+.bmitxt {
+  color: rgb(255, 255, 255);
+  font-family: Inter;
+  font-size: 28px;
+  font-weight: 900;
+  line-height: 120%;
+  letter-spacing: 0%;
+  text-align: left;
+}
+.bmitable {
+  margin-top: 52px;
+  width: 310px;
+  height: 216px;
+}
+.bmitable,
+.bmitable th,
+.bmitable td {
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  border-collapse: collapse;
+  padding: 15px 18px;
+  text-align: left;
+}
+.bmitable th {
+  color: rgb(255, 255, 255);
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 120%;
+  letter-spacing: 0%;
+}
+.bmitable td {
+  color: rgba(255, 255, 255, 0.5);
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 120%;
+  letter-spacing: 0%;
+  text-align: left;
+}
+.Bmisection {
+  justify-content: space-between;
+  gap: 175px;
+}
+.form-group input,
+.form-group select {
+  border-radius: 8px;
+  background-color: rgba(255, 255, 255, 0.1);
+  border-style: none;
+  width: 282.5px;
+  height: 48px;
+  color: rgba(255, 255, 255, 0.6);
+}
+.form-group input::placeholder {
+  padding: 14px;
+}
+.formcontainer {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 12px;
+  margin-top: 34px;
+}
+.btn-calculator {
+  width: 224px;
+  height: 55px;
+  background-color: #e6533c;
+  border-radius: 42px;
+  color: white;
+  font-weight: 500;
+  font-size: 18px;
+  border-style: none;
+  margin-top: 2rem;
+}
+/* Meet our team */
+
+.team {
+  text-align: center;
+  padding-top: 88px;
+}
+.bg-trainers {
+  padding: 20px;
+  border-radius: 18px;
+
+  background-color: rgba(255, 255, 255, 0.1);
+  width: 1060px;
+  margin-top: 58px;
+}
+.trainers {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+}
+.trainercontainer {
+  border-radius: 18px;
+  background-color: rgba(0, 0, 0, 0.2);
+
+  width: 326.67px;
+  height: 272px;
+}
+.trainercontainer img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 18px;
 }
