--- a/a2.css
+++ b/a2.css
@@ -19,7 +19,7 @@
 }
 .hcolor {
   color: #e6533c;
-  font-size: 2.3rem;
+  font-size: 70px;
   font-weight: 800;
 }
 .navitem {
@@ -474,16 +474,16 @@
   justify-content: space-between;
   gap: 175px;
 }
-.form-group input,
-.form-group select {
+.formcontainer input,
+.formcontainer select {
   border-radius: 8px;
   background-color: rgba(255, 255, 255, 0.1);
   border-style: none;
-  width: 282.5px;
+  width: 100%;
   height: 48px;
   color: rgba(255, 255, 255, 0.6);
 }
-.form-group input::placeholder {
+.formcontainer input::placeholder {
   padding: 14px;
 }
 .formcontainer {
@@ -491,6 +491,10 @@
   grid-template-columns: repeat(2, 1fr);
   gap: 12px;
   margin-top: 34px;
+}
+
+.formcontainer .activity {
+  grid-column: span 2;
 }
 .btn-calculator {
   width: 224px;
@@ -523,9 +527,9 @@
   gap: 20px;
 }
 .trainercontainer {
+  position: relative;
   border-radius: 18px;
-  background-color: rgba(0, 0, 0, 0.2);
-
+  background-color: rgba(0, 0, 0, 0.5);
   width: 326.67px;
   height: 272px;
 }
@@ -534,4 +538,130 @@
   height: 100%;
   object-fit: cover;
   border-radius: 18px;
+  z-index: 0;
+  opacity: 0.7;
+}
+.meetteam {
+  padding-bottom: 88px;
+}
+.bmipadding {
+  padding-bottom: 58px;
+}
+/* Footer */
+
+.footerdesc {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 100px;
+}
+.gstart {
+  color: rgb(255, 255, 255);
+  font-size: 32px;
+  font-weight: 700;
+  line-height: 120%;
+  letter-spacing: 0%;
+  text-align: left;
+  margin-bottom: 39px;
+}
+.gtxt {
+  color: rgba(255, 255, 255, 0.5);
+  font-family: Inter;
+  font-size: 23px;
+  font-weight: 400;
+  line-height: 120%;
+  letter-spacing: 0%;
+  margin-top: 20px;
+}
+hr {
+  position: absolute;
+  width: 1059.5px;
+  height: 0;
+  border: 1px solid rgba(255, 255, 255, 0.1);
+}
+.fter p {
+  text-align: center;
+  padding: 18px;
+  color: rgba(255, 255, 255, 0.5);
+
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.3px;
+}
+.footerend {
+  margin-top: 80px;
+}
+
+.trainercontainer h3,
+.trainercontainer p {
+  position: absolute;
+  z-index: 1;
+}
+.trainercontainer h3 {
+  color: rgb(255, 255, 255);
+  font-size: 20px;
+  font-weight: 900;
+  line-height: 120%;
+  letter-spacing: 0%;
+  top: 80%;
+  left: 10%;
+}
+.trainercontainer p {
+  color: rgba(255, 255, 255, 0.5);
+
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 120%;
+  letter-spacing: 0%;
+  top: 90%;
+  left: 10%;
+}
+/* Creative Section */
+
+.review {
+  text-align: center;
+  padding-top: 12px;
+}
+.trainerbanner {
+  margin-top: 80px;
+  padding-bottom: 80px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 20px;
+}
+.reviewbanner {
+  border-radius: 16px;
+  max-width: 500px;
+  height: 500px;
+  background: rgba(141, 174, 173, 0.815);
+  padding: 20px;
+}
+.rimgcontainer {
+  width: 290px;
+  height: 276px;
+  border-radius: 18px;
+  margin-top: 20px;
+  position: relative;
+}
+.rimgcontainer img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 18px;
+}
+.reviewtxt {
+  font-size: 2rem;
+  font-weight: 800;
+  color: white;
+}
+.reviewdesc {
+  font-size: 16px;
+  font-weight: 500;
+  color: antiquewhite;
+  margin-top: 12px;
+}
+.colortxt {
+  color: black;
 }
