--- a/a2.css
+++ b/a2.css
@@ -3,7 +3,11 @@
 * {
   margin: 0;
   padding: 0;
+  /* overflow-x: hidden;
+  /* border: 20px solid red; */
+  /* box-sizing: border-box; */
 }
+
 .inter-font-style {
   font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
@@ -664,4 +668,7 @@ hr {
 }
 .colortxt {
   color: black;
+}
+.displayicon {
+  display: none;
 }
