--- a/a2.css
+++ b/a2.css
@@ -7,7 +7,12 @@
   /* border: 20px solid red; */
   /* box-sizing: border-box; */
 }
-
+.btncontainer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 50px;
+}
 .inter-font-style {
   font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
